# geant4Projects

./: README.md
LAFTRdet/: events.txt  test.txt
LAFTRdet/Calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RUN  cmake_install.cmake  events.txt  exLAFTRa.cc  graphit.py  (+1 more)
LAFTRdet/Calibration-build/: CMakeCache.txt  G4History.macro  Makefile  RUN  SpectraOutput.txt  cmake_install.cmake  errorconvolutiontest.eps  events.txt  exLAFTRa  graphit.py  run1.mac  run2.mac  vis.mac
LAFTRdet/LAFTR/: CMakeLists.txt  README  exLAFTR.cc  vis.mac
LAFTRdet/LAFTR/LAFTRa/: callibration.mac
LAFTRdet/LAFTR/LAFTRa/include/: LAFTRDetectorConstruction.hh  LAFTRTrackingAction.hh
LAFTRdet/LAFTR/LAFTRa/src/: LAFTRDetectorConstruction.cc  LAFTREventAction.cc  LAFTRPrimaryGeneratorAction.cc  LAFTRRunAction.cc  LAFTRSteppingAction.cc
LAFTRdet/LAFTR/LAFTRb/: CMakeLists.txt  vis.mac
LAFTRdet/LAFTR/LAFTRb/include/: LAFTRActionInitialization.hh  LAFTRPrimaryGeneratorAction.hh  LAFTRRunAction.hh
LAFTRdet/LAFTR/LAFTRb/src/: LAFTRDetectorConstruction.cc  LAFTREventAction.cc  LAFTRRunAction.cc
LAFTRdet/LAFTR/LAFTRc/: CMakeLists.txt  vis.mac
LAFTRdet/LAFTR/LAFTRc/include/: LAFTREventAction.hh  LAFTRRunAction.hh
LAFTRdet/LAFTR/LAFTRc/src/: LAFTRDetectorConstruction.cc  LAFTREventAction.cc  LAFTRRunAction.cc
LAFTRdet/LAFTR/include/: LAFTRDetectorConstruction.hh  LAFTREventAction.hh  LAFTRSteppingAction.hh
LAFTRdet/LAFTR/src/: LAFTRActionInitiliazation.cc  LAFTRDetectorConstruction.cc  LAFTREventAction.cc  LAFTRRunAction.cc  LAFTRSteppingAction.cc  LAFTRTrackingAction.cc
(+85 files in other folders)
